Slight tweaks
Nothing major
